5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1601_1801.log
== TEST (2019-03-30 21:31:30) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("'numero de repetiçoes do feiticio: "))
-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:32:18) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("'numero de repeticoes do feiticio: "))
-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:55:35) 
-- CODE:
nome_do_objeto = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:57:03) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = abra + a

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = abra + a
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 21:59:00) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

 abra + a

print(x)
-- ERROR:
File "XXXX", line 4
    abra + a
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:00:23) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = "abra" + a

print(x)
-- OUTPUT:
abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:01:25) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = "abra" +     a

print(x)
-- OUTPUT:
abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:02:27) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra" + a) * b

print(x)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:02:47) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra" + a) * b

print(x)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:03:00) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra" + a) * b

print(x)
-- EXECUTION TIME:
0.134061
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarroabracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:03:13) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra" + a) * b

print(x)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:04:25) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra", + a) * b

print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = ("abra", + a) * b
TypeError: bad operand type for unary +: 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:04:47) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra" + a) * b

print(x)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:14:01) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra" + a) * b

print(x)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:14:31) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra" + a) * b

print(x)
-- EXECUTION TIME:
0.133537
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarroabracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:17:04) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra")+ (a* b)

print(x)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:17:35) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra")+ a* b

print(x)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:17:55) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra"+ ) a* b

print(x)
-- ERROR:
File "XXXX", line 4
    x = ("abra"+ ) a* b
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:18:09) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = "abra"+ a* b

print(x)
-- OUTPUT:
abralivrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:18:37) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra"+ a)* b

print(x)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:19:12) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra_"+ a)* b

print(x)
-- OUTPUT:
abra_livroabra_livroabra_livroabra_livroabra_livroabra_livroabra_livroabra_livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:25:41) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra"+ a)* b

print(x)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:27:08) 
-- CODE:
a = input("nome do objeto_: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra"+ a)* b

print(x)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:27:32) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra"+ a)* b

print(x)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:27:45) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra"+ a)* b

print(x)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:27:54) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra"+ a)* b

print(x)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:28:12) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra"+ a)* b

print(x)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:28:35) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra_"+ a)* b

print(x)
-- OUTPUT:
abra_livroabra_livroabra_livroabra_livroabra_livroabra_livroabra_livroabra_livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:28:48) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra_"+ a)* b

print(x)
-- OUTPUT:
abra_livroabra_livroabra_livroabra_livroabra_livroabra_livroabra_livroabra_livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:29:01) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra_"+ a)* b

print(x)
-- EXECUTION TIME:
0.165253
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra_livroabra_livroabra_livroabra_livroabra_livroabra_livroabra_livroabra_livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra_carroabra_carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra_caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:29:22) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra()"+ a)* b

print(x)
-- OUTPUT:
abra()livroabra()livroabra()livroabra()livroabra()livroabra()livroabra()livroabra()livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:29:49) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra()"+ a)* b

print(x)
-- EXECUTION TIME:
0.132893
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra()livroabra()livroabra()livroabra()livroabra()livroabra()livroabra()livroabra()livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra()carroabra()carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra()caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:31:43) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = ("abra" ""+ a)* b

print(x)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:33:36) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = a * b

print(str(x)
-- ERROR:
File "XXXX", line 7
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:34:51) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

y = abra
x = a * b

print(str(x) + "y"
-- ERROR:
File "XXXX", line 8
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:35:32) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

y = abra
x = a * b

print(str(x) + "y")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = abra
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:36:11) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

y = abra
x = a * b

print(str(x) + y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    y = abra
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:36:35) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


x = a * b

print(str(x) + )
-- ERROR:
File "XXXX", line 7
    print(str(x) + )
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:36:43) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


x = a * b

print(str(x) 
-- ERROR:
File "XXXX", line 8
    
                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:36:53) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


x = a * b

print(str(x) )
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:40:09) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = a * b

print(str(abra_nome_do_objeto) + " a" )
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:40:54) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = a * b

print(str(abra_nome_do_objeto) +  " a" )
-- OUTPUT:
livrolivrolivrolivrolivrolivrolivrolivro a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:41:52) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = abra
abra_nome_do_objeto = a * b

print(str(abra_nome_do_objeto, x) +  " a" )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = abra
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:42:14) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = abra
abra_nome_do_objeto = a * b

print(str(abra_nome_do_objeto, "x") +  " a" )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = abra
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:45:48) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = abra

abra_nome_do_objeto = (x + a) * b 

print(str(abra_nome_do_objeto )
-- ERROR:
File "XXXX", line 9
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:46:08) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = abra

abra_nome_do_objeto = (x + a) * b 

print(str(abra_nome_do_objeto ))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = abra
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:46:31) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = "abra"

abra_nome_do_objeto = (x + a) * b 

print(str(abra_nome_do_objeto ))
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:47:11) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = "abra"

abra_nome_do_objeto = str(x + a) + * b 

print(str(abra_nome_do_objeto ))
-- ERROR:
File "XXXX", line 6
    abra_nome_do_objeto = str(x + a) + * b 
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:47:21) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = "abra"

abra_nome_do_objeto = str(x + a)  * b 

print(str(abra_nome_do_objeto ))
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:48:04) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = "abra"

abra_nome_do_objeto = str(x + a)  * b 

print(str(abra_nome_do_objeto ))
-- EXECUTION TIME:
0.18771
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarroabracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:49:45) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = "abra"

abra_nome_do_objeto = (x + a)  * b

print(str(abra_nome_do_objeto) + a)
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:50:34) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = "abra"

abra_nome_do_objeto = (x + a)  * b

print(str(abra_nome_do_objeto) + " a")
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro a
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:51:24) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = "abra"

abra_nome_do_objeto = (x + a)  * b

print(str("abra_nome_do_objeto") + " ")
-- OUTPUT:
abra_nome_do_objeto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:52:38) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = "abra"

abra_nome_do_objeto = (x + a)  * b

print(str(x + abra_nome_do_objeto) )
-- OUTPUT:
abraabralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:52:59) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))

x = "abra"

abra_nome_do_objeto = (x + a)  * b

print(str( + abra_nome_do_objeto) )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(str( + abra_nome_do_objeto) )
TypeError: bad operand type for unary +: 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:53:38) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = (x + a)  * b

print(abra_nome_do_objeto) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    abra_nome_do_objeto = (x + a)  * b
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:54:50) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = (abra + a)  * b

print(abra_nome_do_objeto) 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    abra_nome_do_objeto = (abra + a)  * b
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:55:15) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = ("abra" + a)  * b

print(abra_nome_do_objeto) 
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:58:08) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = ("abra" + a)  * b

print(abra_nome_do_objeto) 
-- EXECUTION TIME:
0.133556
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abracarroabracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:59:26) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = ("abra" + a)  * b

print(abra_nome_do_objeto) 
-- OUTPUT:
abralivroabralivroabralivroabralivroabralivroabralivroabralivroabralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:02:39) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = ("abra " + a)  * b

print(abra_nome_do_objeto) 
-- OUTPUT:
abra livroabra livroabra livroabra livroabra livroabra livroabra livroabra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:03:16) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = (" abra " + a)  * b

print(abra_nome_do_objeto) 
-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:03:43) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = (" abra     " + a)  * b

print(abra_nome_do_objeto) 
-- OUTPUT:
abra     livro abra     livro abra     livro abra     livro abra     livro abra     livro abra     livro abra     livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:04:02) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = (" abra " + a)  * b

print(abra_nome_do_objeto) 
-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:04:25) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = (" abra" + a)  * b

print(abra_nome_do_objeto) 
-- OUTPUT:
abralivro abralivro abralivro abralivro abralivro abralivro abralivro abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:04:39) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = (" abra " + a)  * b

print(abra_nome_do_objeto) 
-- OUTPUT:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:04:51) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = (" abra " + a)  * b

print(abra_nome_do_objeto) 
-- EXECUTION TIME:
0.128124
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
abra livro abra livro abra livro abra livro abra livro abra livro abra livro abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
abra carro abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:05:36) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = (" Abra " + a)  * b

print(abra_nome_do_objeto) 
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:05:51) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = (" Abra " + a)  * b

print(abra_nome_do_objeto) 
-- EXECUTION TIME:
0.135118
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:14:35) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = (" Abra " + a)  * b

print(abra_nome_do_objeto) 
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:14:44) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = (" Abra " + a)  * b

print(abra_nome_do_objeto) 
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:15:00) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = (" Abra " + a)  * b

print(abra_nome_do_objeto) 
-- EXECUTION TIME:
0.145403
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 02:35:22) 
-- CODE:
a = input("nome do objeto: ")
b = int(input("numero de repeticoes do feiticio: "))


abra_nome_do_objeto = (" Abra " + a)  * b

print(abra_nome_do_objeto) 
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
